<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.goals.AddGoalFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".ui.fragments.goals.AddGoalFragment"
        android:layout_marginBottom="70dp">

        <TextView
            android:id="@+id/addGoalNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/name" />

        <EditText
            android:id="@+id/addGoalName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_goal_name"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="87dp"
            tools:layout_editor_absoluteY="96dp" />

        <TextView
            android:id="@+id/addGoalNameError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goal_name_cannot_be_empty"
            android:textSize="12sp"
            android:textColor="#f00" />

        <TextView
            android:id="@+id/addGoalTargetAmountTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/target_amount_dkk" />

        <EditText
            android:id="@+id/addGoalTargetAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_target_amount"
            android:inputType="numberDecimal"
            tools:layout_editor_absoluteX="87dp"
            tools:layout_editor_absoluteY="96dp" />

        <TextView
            android:id="@+id/addGoalTargetAmountError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/target_amount_cannot_be_empty"
            android:textSize="12sp"
            android:textColor="#f00" />

        <TextView
            android:id="@+id/addGoalCurrentAmountTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/current_amount" />

        <EditText
            android:id="@+id/addGoalCurrentAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_current_amount"
            android:inputType="numberDecimal"
            tools:layout_editor_absoluteX="87dp"
            tools:layout_editor_absoluteY="96dp" />

        <TextView
            android:id="@+id/addGoalCurrentAmountError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_amount_cannot_be_empty"
            android:textSize="12sp"
            android:textColor="#f00" />

        <TextView
            android:id="@+id/addGoalDueDateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/due_date" />

        <EditText
            android:id="@+id/addGoalDueDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:ems="10" />

        <TextView
            android:id="@+id/addGoalDueDateError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/due_date_cannot_be_empty"
            android:textSize="12sp"
            android:textColor="#f00" />

        <TextView
            android:id="@+id/addGoalStartDateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/start_date" />

        <EditText
            android:id="@+id/addGoalStartDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:ems="10" />

        <TextView
            android:id="@+id/addGoalStartDateError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_date_cannot_be_empty"
            android:textSize="12sp"
            android:textColor="#f00" />

        <Button
            android:id="@+id/submitGoalButton"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:text="@string/add_goal"
            android:background="@color/blue_bg"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_marginTop="30dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>