<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.accounts.AddAccountFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".ui.fragments.accounts.AddAccountFragment"
        android:layout_marginBottom="100dp">

        <TextView
            android:id="@+id/addAccountNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/name" />

        <EditText
            android:id="@+id/addAccountName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_account_name"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="87dp"
            tools:layout_editor_absoluteY="96dp" />

        <TextView
            android:id="@+id/addAccountNameError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_name_cannot_be_empty"
            android:textSize="12sp"
            android:textColor="#f00" />

        <TextView
            android:id="@+id/addAccountAmountTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/amount_dkk" />

        <EditText
            android:id="@+id/addAccountAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_amount_in_dkk"
            android:inputType="numberDecimal"
            tools:layout_editor_absoluteX="87dp"
            tools:layout_editor_absoluteY="96dp" />

        <TextView
            android:id="@+id/addAccountAmountError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount_cannot_be_empty"
            android:textSize="12sp"
            android:textColor="#f00" />

        <TextView
            android:id="@+id/addAccountIncomeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/monthly_income" />

        <EditText
            android:id="@+id/addAccountIncome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_monthly_income"
            android:inputType="numberDecimal"
            tools:layout_editor_absoluteX="87dp"
            tools:layout_editor_absoluteY="96dp" />

        <TextView
            android:id="@+id/addAccountIncomeError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/income_cannot_be_empty"
            android:textSize="12sp"
            android:textColor="#f00" />

        <TextView
            android:id="@+id/addAccountTypeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/type" />

        <Spinner
            android:id="@+id/accountTypeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/submitAccountButton"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:text="@string/add_account"
            android:background="@color/blue_bg"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_marginTop="30dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>