<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.expenses.AddExpenseFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".ui.fragments.expenses.AddExpenseFragment"
        android:layout_marginBottom="70dp">

        <TextView
            android:id="@+id/addExpenseNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/name" />

        <EditText
            android:id="@+id/addExpenseName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_transaction_name"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="87dp"
            tools:layout_editor_absoluteY="96dp" />

        <TextView
            android:id="@+id/addExpenseNameError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transaction_name_cannot_be_empty"
            android:textSize="12sp"
            android:textColor="#f00" />

        <TextView
            android:id="@+id/addExpenseAmountTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/amount_dkk" />

        <EditText
            android:id="@+id/addExpenseAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_amount_in_dkk"
            android:inputType="numberDecimal"
            tools:layout_editor_absoluteX="87dp"
            tools:layout_editor_absoluteY="96dp" />

        <TextView
            android:id="@+id/addExpenseAmountError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount_cannot_be_empty"
            android:textSize="12sp"
            android:textColor="#f00" />

        <TextView
            android:id="@+id/addExpenseDateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/date" />

        <EditText
            android:id="@+id/addExpenseDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:ems="10" />

        <TextView
            android:id="@+id/addExpenseDateError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_cannot_be_empty"
            android:textSize="12sp"
            android:textColor="#f00" />

        <TextView
            android:id="@+id/addExpenseCategoryTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/type" />

        <Spinner
            android:id="@+id/addExpenseCategorySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/addExpenseAccountTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/type" />

        <Spinner
            android:id="@+id/addExpenseAccountSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/addExpenseIsRecurring"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/is_the_transaction_recurring_every_month"
            android:layout_marginTop="8dp"/>

        <Button
            android:id="@+id/submitExpenseButton"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:text="@string/add_expense"
            android:background="@color/blue_bg"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_marginTop="30dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>