<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.categories.AddCategoryFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".ui.fragments.categories.AddCategoryFragment"
        android:layout_marginBottom="90dp">

        <TextView
            android:id="@+id/addCategoryNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/name" />

        <EditText
            android:id="@+id/addCategoryName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_category_name"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="87dp"
            tools:layout_editor_absoluteY="96dp" />

        <TextView
            android:id="@+id/addCategoryNameError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name cannot be empty!"
            android:textSize="12sp"
            android:textColor="#f00" />

        <TextView
            android:id="@+id/addCategoryMonthlyGoalTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/monthly_spending_goal" />

        <EditText
            android:id="@+id/addCategoryMonthlyGoal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_amount_in_dkk"
            android:inputType="numberDecimal"
            tools:layout_editor_absoluteX="87dp"
            tools:layout_editor_absoluteY="96dp" />

        <TextView
            android:id="@+id/addCategoryMonthlyGoalError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Monthly goal cannot be empty!"
            android:textSize="12sp"
            android:textColor="#f00" />

        <Button
            android:id="@+id/submitCategoryButton"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:text="@string/add_category"
            android:background="@color/blue_bg"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_marginTop="30dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>